# Sui-overflow

./: README.md
contracts/: .gitignore  Move.toml  README.md
contracts/sources/: shares_trading.move  shares_trading_tests.move
server/: .env.example  Cargo.toml  README.md
server/migrations/: 01_init_database.sql  02_add_metadata_column.sql
server/src/: error.rs  main.rs
server/src/block_chain/: mod.rs  monad.rs  sui.rs  utils.rs
server/src/db/: mod.rs  models.rs  operations.rs
server/src/routes/: agent.rs  mod.rs  signature.rs  user.rs
